<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:iconTint="@drawable/item_color"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_btnHome"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:iconTint="@drawable/item_color"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_btnMyAccount"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:iconTint="@drawable/item_color"
        android:icon="@drawable/ic_chatbubble"
        android:title="@string/nav_btnHelp"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:iconTint="@drawable/item_color"
        android:icon="@drawable/ic_alert"
        android:title="@string/nav_btnNew"/>
</menu>