<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   >

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/overpass_light"
        android:text="@string/txtRegisterTitle"
        android:textColor="#3399FF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pswordText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="280dp"
        android:layout_height="50dp"

        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/prompt_userName"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/postalText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/prompt_postalCode"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/Registerbutton"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:background="#3399FF"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/btnRegister" />
</LinearLayout>