<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">>

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/txt4"
        android:textColor="#2A2A2B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/img4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        app:srcCompat="@drawable/pharmacy" />

    <TextView
        android:id="@+id/cont4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:fontFamily="@font/overpass_light"
        android:gravity="center"
        android:text="@string/cont4"
        android:textColor="#2A2A2B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginBottom="84dp"
        android:background="#FFFFFF"
        android:onClick="clickBtn4"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/con" />
</androidx.constraintlayout.widget.ConstraintLayout>