<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/txt2"
        android:textColor="#2A2A2B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:contentDescription="@string/img2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2"
        app:srcCompat="@drawable/medicalreport" />

    <TextView
        android:id="@+id/cont2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:fontFamily="@font/overpass_light"
        android:gravity="center"
        android:text="@string/cont2"
        android:textColor="#2A2A2B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2" />

    <ImageButton
        android:id="@+id/imgBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="82dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/btnContinue"
        android:onClick="clickBtn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont2"
        app:srcCompat="@drawable/con" />
</androidx.constraintlayout.widget.ConstraintLayout>