<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/overpass_light"
        android:text="@string/txtRegisterTitle"
        android:textColor="#3399FF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:hint="@string/txtId"
        android:fontFamily="@font/overpass_light"
        android:background="@null"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:id="@+id/txtId"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:hint="@string/txtPw"
        android:fontFamily="@font/overpass_light"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:id="@+id/txtPw"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/prompt_userName"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/postalText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="348dp"
        android:ems="10"
        android:hint="@string/prompt_postalCode"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="400dp"
        android:background="#3399FF"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/btnRegister"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/postalText"
        />
<!--
    <TextView
        android:id="@+id/txtRegQ"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnSignIn"
        android:layout_alignLeft="@+id/btnSignIn"
        android:layout_alignEnd="@+id/btnSignIn"
        android:layout_alignRight="@+id/btnSignIn"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:fontFamily="@font/overpass_light"
        android:text="@string/txtRegQ"
        android:textColor="#2A2A2B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
-->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPw"
        app:layout_constraintStart_toStartOf="@+id/txtPw"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnReg"
        android:layout_alignStart="@+id/btnReg"
        android:layout_alignLeft="@+id/btnReg"
        android:layout_alignEnd="@+id/btnReg"
        android:layout_alignRight="@+id/btnReg"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:fontFamily="@font/overpass_semibold"
        android:text="@string/txtSignIn"
        android:textColor="#3399FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />

</RelativeLayout>